# easy-letters

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  publish_to_pypi.yml  tests.yml
assets/: make_figures.sh  workflow.dot
easy_letters/: __init__.py  connectors.py  similarity_search.py
notebooks/: README.md  demo_openai.ipynb
tests/: __init__.py  shared.py  test_connectors.py  test_similarity_search.py
tests/test_data/: README.md
tests/test_data/sample_ads/: description_0.text  description_1.text  description_10.text  description_100.text  description_101.text  description_102.text  description_103.text  description_104.text  description_105.text  description_106.text  description_107.text  description_108.text  description_109.text  description_11.text  description_110.text  description_111.text  description_112.text  description_113.text  description_114.text  description_115.text  description_116.text  description_117.text  description_118.text  description_119.text  description_12.text  description_120.text  description_121.text  description_122.text  description_123.text  description_124.text  description_125.text  description_126.text  description_127.text  description_128.text  description_129.text  description_13.text  description_130.text  description_131.text  description_132.text  description_133.text  (+259 more)
tests/test_data/sample_letters/: sample_letter_0.text  sample_letter_1.text  sample_letter_10.text  sample_letter_100.text  sample_letter_102.text  sample_letter_103.text  sample_letter_104.text  sample_letter_105.text  sample_letter_106.text  sample_letter_107.text  sample_letter_108.text  sample_letter_109.text  sample_letter_110.text  sample_letter_111.text  sample_letter_113.text  sample_letter_114.text  sample_letter_115.text  sample_letter_116.text  sample_letter_117.text  sample_letter_118.text  sample_letter_119.text  sample_letter_12.text  sample_letter_121.text  sample_letter_122.text  sample_letter_123.text  sample_letter_124.text  sample_letter_125.text  sample_letter_126.text  sample_letter_127.text  sample_letter_128.text  sample_letter_129.text  sample_letter_13.text  sample_letter_130.text  sample_letter_131.text  sample_letter_132.text  sample_letter_133.text  sample_letter_134.text  sample_letter_135.text  sample_letter_136.text  sample_letter_137.text  (+720 more)
