[tool.poetry]
name = "easy-letters"
version = "0.1.8"
description = "A Python package for generating draft application letters using generative AI"
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
readme = "README.md"
packages = [{ include = "easy_letters", from = "." }]
include = ["README.md", "LICENSE"]
license = "MIT"
repository = "https://github.com/habedi/easy-letters"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.16.1"
qdrant-client = "^1.8.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.2.2"
black = "^24.4.2"
pytest-cov = "^5.0.0"
poetry-dynamic-versioning = "^1.4.0"
tiktoken = "^0.7.0"
pandas = "^2.2.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
versioning = "semver"  # Semantic Versioning
